# iris

./: .gitignore  Cargo.toml  PERFORMANCE_AUDIT.md  README.md
src/: app.rs  browser.rs  cli.rs  events.rs  lib.rs  main.rs  ui.rs  viewer.rs  worker.rs
