[package]
name = "iris"
version = "0.1.0"
edition = "2024"
description = "A terminal image viewer with Kitty protocol support"
authors = ["Wentao Li <lwt@dreamriver.art>"]
license = "MIT"
repository = "https://github.com/lwt-zh/iris"

[dependencies]
ratatui = "0.29"
crossterm = { version = "0.28", features = ["event-stream"] }
ratatui-image = { version = "4.2", features = ["crossterm"] }
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "gif", "webp", "bmp"] }
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"
