[package]
name = "iris-viewer"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
default-run = "iris"
description = "A terminal image viewer with Kitty protocol support and automatic fallback"
authors = ["Wentao Li <lwt@dreamriver.art>"]
license = "MIT"
repository = "https://github.com/sadlavaarsc/iris"
readme = "README.md"
keywords = ["terminal", "image", "viewer", "tui", "kitty"]
categories = ["command-line-utilities", "multimedia::images"]
exclude = [
    "assets/",
    ".DS_Store",
    "PERFORMANCE_AUDIT.md",
    ".claude/",
]

[[bin]]
name = "iris"
path = "src/main.rs"

[dependencies]
ratatui = "0.30"
crossterm = { version = "0.28", features = ["event-stream"] }
ratatui-image = { version = "10.0", default-features = false, features = ["crossterm"] }
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "gif", "webp", "bmp"] }
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"
